@@ -1,5 +1,5 @@
 # Torrus commandline wrapper configuration
 
-commands="${commands} siam_genddx=siam_genddx siam_genxml=siam_genxml \
+commands="${commands} siam_genddx=siam_genddx \
 siam_rrdfetch=siam_rrdfetch"
 
